# NeoMind

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  EXTENSION_STABILITY_FIX_PLAN.md  README.md  README.zh.md  TECHNICAL_DEBT_CLEANUP_PLAN.md  clippy.toml  config.example.toml  config.full.toml  config.minimal.toml  package.json
.github/workflows/: build.yml  code-quality.yml
crates/agent/: Cargo.toml
crates/agent/src/: context_selector.rs  error.rs  lib.rs  llm.rs  prompts.rs  session.rs  translation.rs
crates/agent/tests/: agent_performance_test.rs  conversation_integration.rs  full_integration_test.rs  llm_integration_test.rs  load_test.rs  multimodal_message_test.rs  real_world_simulation_test.rs  realistic_performance_test.rs
crates/alerts/: Cargo.toml
crates/alerts/src/: alert.rs  channel_schema.rs  channels.rs  error.rs  lib.rs  manager.rs  plugin.rs  plugin_adapter.rs
crates/api/: Cargo.toml
crates/api/src/: audit.rs  auth.rs  auth_users.rs  builtin_plugins.rs  cache.rs  config.rs  crypto.rs  event_persistence.rs  event_services.rs  lib.rs  openapi.rs  rate_limit.rs  shutdown.rs  startup.rs  validator.rs
crates/api/tests/: integration.rs
crates/automation/: Cargo.toml
crates/automation/src/: device_type_generator.rs  intent.rs  lib.rs  transform.rs  types.rs
crates/automation/tests/: transform_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  main_old.rs
crates/commands/: Cargo.toml
crates/commands/src/: ack.rs  adapter.rs  api.rs  command.rs  events.rs  lib.rs  processor.rs  queue.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  event.rs  eventbus.rs  lib.rs  macros.rs  message.rs  session.rs
crates/devices/: Cargo.toml
crates/devices/examples/: device_demo.rs  test_binary.rs  test_image_storage.rs  test_read.rs  test_storage.rs
crates/devices/src/: adapter.rs  adapter_manager.rs  builtin_types.rs  discovery.rs  embedded_broker.rs  hass_discovery.rs  hass_discovery_listener.rs  hass_discovery_mapper.rs  lib.rs  manager.rs  mdl.rs  mdl_format.rs  modbus.rs  mqtt.rs  mqtt_v2.rs  multi_broker.rs  plugin_adapter.rs  plugin_registry.rs  service.rs  telemetry.rs  unified_extractor.rs
crates/devices/src/adapters/: hass.rs  http.rs  mod.rs  modbus.rs  mqtt.rs  plugins.rs
crates/devices/src/hass/: client.rs  entities.rs  mapper.rs  mod.rs  templates.rs  websocket.rs
crates/devices/src/protocol/: hass_mapping.rs  mapping.rs  mod.rs  modbus_mapping.rs  mqtt_mapping.rs
crates/devices/tests/: e2e_service_test.rs  integration_test.rs  mqtt_mock_device.rs  registry_service_test.rs  telemetry_test.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: lib.rs  registry.rs
crates/integrations/src/connectors/: base.rs  mod.rs  mqtt.rs
crates/integrations/src/protocols/: hass.rs  mod.rs  modbus.rs
crates/llm/: Cargo.toml
crates/memory/: Cargo.toml
crates/memory/src/: budget.rs  compression.rs  error.rs  graph.rs  importance.rs  lib.rs  long_term.rs  mid_term.rs  short_term.rs  tiered.rs  unified.rs
crates/memory/tests/: tiered_memory_test.rs
crates/neomind-api/: Cargo.toml
crates/neomind-cli/: Cargo.toml
crates/neomind-commands/: Cargo.toml
crates/neomind-core/: Cargo.toml
crates/neomind-devices/: Cargo.toml
crates/neomind-extension-runner/: Cargo.toml
crates/neomind-extension-sdk/: Cargo.toml  README.md
crates/neomind-extension-sdk/frontend/: README.md  package.template.json  vite.template.ts
crates/neomind-extension-sdk/frontend/src/: component.tsx  index.ts  types.ts
crates/neomind-extension-sdk/src/: descriptor.rs  extension.rs  lib.rs  macros.rs  prelude.rs  utils.rs  wasm_types.rs
crates/neomind-extension-sdk/src/capabilities/: mod.rs
crates/neomind-extension-sdk/src/native/: ffi.rs
crates/neomind-extension-sdk/src/wasm/: bindings.rs  mod.rs  types.rs
crates/neomind-llm/: Cargo.toml
crates/neomind-memory/: Cargo.toml
crates/neomind-messages/: Cargo.toml
crates/neomind-rules/: Cargo.toml
crates/neomind-sandbox/: Cargo.toml
crates/neomind-storage/: Cargo.toml
crates/neomind-tools/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: descriptor.rs  lib.rs  macros.rs
crates/rules/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/scenarios/: Cargo.toml
crates/scenarios/src/: error.rs  lib.rs  manager.rs  scenario.rs
crates/storage/: Cargo.toml
crates/tools/: Cargo.toml
crates/workflow/: Cargo.toml
docs/: GLOSSARY.md  IMPROVEMENT_PLAN.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  README.md  auth-improvement-plan.md  automation-enhancement-plan.md  dashboard-design.md  deployment-guide.md  event-flow-diagram.md  llm-autonomous-decision-guide.md  test-results-summary.md  tools-analysis.md
docs/architecture/: COMMAND_ARCHITECTURE.md  CORE_ARCHITECTURE.md  MDL_DSL_LLM_INTEGRATION.md  PLUGIN_ARCHITECTURE.md  STORAGE_ARCHITECTURE.md  plugin-migration.md  registries.md
docs/guides/: README.md
docs/modules/: 01-core.md  02-llm.md  03-agent.md  04-devices.md  05-automation.md  06-rules.md  07-tools.md  08-memory.md  09-messages.md  10-storage.md  11-integrations.md  12-commands.md  13-plugin-sdk.md  14-api.md  15-web.md  README.md
docs/plugins/: END_TO_END_TUTORIAL.md  NATIVE_PLUGIN_API.md  PLUGIN_DEVELOPMENT.md  TEMPLATE.md  WASM_PLUGIN_GUIDE.md
examples/native-plugin/: Cargo.toml  README.md
plugins/: create-plugin.sh
scripts/: comprehensive_test.py  generate_test_data.py  generate_test_data.sh  install.sh  model_comparison_test.sh  neomind.service  rename_crate.sh
static/: index.html
static/assets/: index-DGH0MNjE.css  index-DfpxVjOo.js
web/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test_parens  vite.config.ts  vitest.config.ts
web/e2e/: login.spec.ts
web/scripts/: build-dmg.sh
web/src/: App.tsx  index.css  main.tsx
web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/scripts/: build-extension-runner.sh
web/src-tauri/src/: main.rs
(+890 files in other folders)
