[package]
name = "edge-ai-alerts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edge-ai-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# For webhook notifications
reqwest = { version = "0.12", features = ["json"], optional = true }

# For email notifications
lettre = { version = "0.11", optional = true }

[features]
default = []
webhook = ["reqwest"]
email = ["lettre"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
