[package]
name = "edge-ai-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edge-ai-core = { path = "../core" }
edge-ai-storage = { path = "../storage" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Vector similarity
fnv = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
