[package]
name = "neomind-extension-sdk"
version = "2.0.0"
edition = "2021"
authors = ["NeoMind Team"]
license = "Apache-2.0"
description = "Unified SDK for developing NeoMind extensions (ABI Version 3)"

[lib]
name = "neomind_extension_sdk"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
semver = "1"
async-trait = "0.1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neomind-core = { path = "../neomind-core" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]

[features]
default = []
native = []
wasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
